# conways_game_of_life.rs

./: Cargo.toml  README.md
src/: lib.rs  life.rs  lifegame.rs  main.rs
