[package]
name = "game_of_life_rs"
version = "0.2.0"
authors = ["hi_go <me@clutte.red>"]
edition = "2021"

resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

# Dependencies for all targets go here.
[dependencies]
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
strum = "0.23"
strum_macros = "0.23"
wasm-bindgen = "0.2"

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_wgpu", "bevy_winit", "render", "x11"]}

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render"]}
bevy_webgl2 = "0.5"
